updated categories-box and categories-box img to prevent shifts

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -414,7 +414,7 @@ nav ul li :hover {
   object-position: center bottom;
   box-shadow: 0 .3125em .9375rem rgba(0, 0, 0, .2);
   border-radius: .5em;
-  object-fit: cover
+  object-fit: contain;
 }
 
 .grid2 {
@@ -547,7 +547,7 @@ nav ul li :hover {
 .categories-box img {
   width: 100%;
   height: auto;
-  aspect-ratio: 1.80/1;
+  aspect-ratio: 16 / 9;
   margin: 0 auto
 }
 
@@ -602,6 +602,7 @@ nav ul li :hover {
   width: 100%;
   max-width: 100vw;
   height: auto;
+  min-height: 3rem;
   box-shadow: 0 .25em .625em rgba(0, 0, 0, .2);
   margin-bottom: 2em
 }
@@ -1721,7 +1722,7 @@ input::placeholder {
   .categories-box,
   .feature-article-grid,
   .grid2 {
-    min-height: 2rem;
+    min-height: 3rem;
     height: auto
   }
 
@@ -1739,6 +1740,8 @@ input::placeholder {
   .categories-box {
     width: 100%;
     max-width: 100vw;
+    min-height: 3rem;
+    height: auto;
     margin: 1em auto 2em
   }
 
@@ -2541,6 +2544,18 @@ input::placeholder {
     gap: 1em
   }
 
+  .categories-grid,
+  .feature-article-grid {
+    display: grid;
+    margin: 2em auto;
+    gap: 2em;
+    min-width: 5vw;
+    width: 90%;
+    max-width: 90vw;
+    min-height: 3rem;
+    height: auto
+  }
+
   .button2,
   .quote h1,
   .quote p {
@@ -2593,14 +2608,6 @@ input::placeholder {
   .feature-article-grid {
     width: 100%;
     max-width: 100vw;
-    height: auto;
-    min-height: 2rem;
-  }
-
-  .categories-grid {
-    margin: 0 auto;
-    max-width: 75vw;
-    width: 75%;
     height: auto;
     min-height: 2rem;
   }
@@ -2665,6 +2672,7 @@ input::placeholder {
     max-width: 100vw;
     width: 100%;
     height: auto;
+    min-height: 5rem;
     padding: 0
   }
 
